--- a/src/main/webapp/companies.html
+++ b/src/main/webapp/companies.html
@@ -16,9 +16,10 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/dashboard.css" rel="stylesheet">
     <link href="libs/bootstrap/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css"  rel="stylesheet">
-    <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">   
+    <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="libs/bootstrap-table-1.6.1/bootstrap-table.min.css"  rel="stylesheet">
-    
+    <link href="css/font-awesome.min.css"  rel="stylesheet">    
+
     <link href="css/wr8.css"  rel="stylesheet">    
     <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -96,7 +97,7 @@
 				</div>
 			</div>
 			<div class="panel-footer">
-				<button onclick='createCompany()'>Add Company</button>
+				<button class='btn btn-info' onclick='createCompany()'>Add Company</button>
 			</div>
 		</div>
 
