--- a/src/main/webapp/company-unit.html
+++ b/src/main/webapp/company-unit.html
@@ -22,6 +22,7 @@
 
     <link href="css/wr8.css"  rel="stylesheet">    
     <!-- InstanceBeginEditable name="head" -->
+
 <!-- InstanceEndEditable -->
   </head>
 
@@ -67,6 +68,11 @@
        </div>  
     </div>  
 
+    <dl>
+    	<dt></dt>
+    	<dd></dd>
+    </dl>
+    
     <div class="container">
       <!-- InstanceBeginEditable name="MainBody" -->
 		<h1 class="page-header">
@@ -78,7 +84,9 @@
 		<div class='panel panel-info'>
 		    <div class='panel-heading'>
 		        <h4 class="panel-title">
-                  Complex Info
+	               <a data-toggle="collapse" data-target="#info-form">
+	                 Complex Info
+	               </a>
                 </h4>
 		    </div>		
 		    <div class='panel-body'>
