Added network tracking / beta CRUD

--- a/src/main/webapp/export.html
+++ b/src/main/webapp/export.html
@@ -18,6 +18,7 @@
     <link href="libs/bootstrap/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css"  rel="stylesheet">
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="libs/bootstrap-table-1.6.1/bootstrap-table.min.css"  rel="stylesheet">
+    <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="css/font-awesome.min.css"  rel="stylesheet">    
 
     <link href="css/wr8.css"  rel="stylesheet">    
@@ -85,6 +86,8 @@
    	<script src='libs/jasny-bootstrap/js/jasny-bootstrap.min.js'></script>
 	<script src='js/wr8.js'></script>
 	<script src='js/live.js'></script>
+    <script src='js/json-io-utils.js'></script>	
+
 	<!-- InstanceBeginEditable name="AfterJsLoad" -->
 	<!-- InstanceEndEditable -->
     
