--- a/src/main/webapp/company-unit.html
+++ b/src/main/webapp/company-unit.html
@@ -18,6 +18,7 @@
     <link href="libs/bootstrap/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css"  rel="stylesheet">
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="libs/bootstrap-table-1.6.1/bootstrap-table.min.css"  rel="stylesheet">
+    <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="css/font-awesome.min.css"  rel="stylesheet">    
 
     <link href="css/wr8.css"  rel="stylesheet">    
@@ -68,11 +69,6 @@
        </div>  
     </div>  
 
-    <dl>
-    	<dt></dt>
-    	<dd></dd>
-    </dl>
-    
     <div class="container">
       <!-- InstanceBeginEditable name="MainBody" -->
 		<h1 class="page-header">
@@ -87,6 +83,8 @@
 	               <a data-toggle="collapse" data-target="#info-form">
 	                 Complex Info
 	               </a>
+	               <span class='events-label'><span data-bind="text: networkStatus.eventCount"></span> Events</span>
+            	   <button type='button' data-bind='click: showNetworkMap' class='network-map-btn btn btn-xs btn-primary'>Network Map</button>
                 </h4>
 		    </div>		
 		    <div class='panel-body'>
@@ -329,9 +327,12 @@
    	<script src='libs/jasny-bootstrap/js/jasny-bootstrap.min.js'></script>
 	<script src='js/wr8.js'></script>
 	<script src='js/live.js'></script>
+    <script src='js/json-io-utils.js'></script>	
+
 	<!-- InstanceBeginEditable name="AfterJsLoad" -->
 	<script src='js/company-unit.js'></script>
-	<script src='js/live.js'></script>
+	<script src='libs/springy/springy.js'></script>
+	<script src="libs/springy/springyui.js"></script>
 	<!-- InstanceEndEditable -->
     
 	
