--- a/src/main/webapp/companies.html
+++ b/src/main/webapp/companies.html
@@ -16,6 +16,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/dashboard.css" rel="stylesheet">
     <link href="libs/bootstrap/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css"  rel="stylesheet">
+    <link href="libs/bootstrap-notify/bootstrap-notify.css"  rel="stylesheet">    
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="libs/bootstrap-table-1.6.1/bootstrap-table.min.css"  rel="stylesheet">
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
@@ -65,6 +66,7 @@
        </div>  
     </div>  
 
+    <div class='notifications top-right'></div>
     <div class="container">
       <!-- InstanceBeginEditable name="MainBody" -->
 
@@ -112,7 +114,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<form id='company-add-form' class="form-horizontal" action='#' method='POST'>
+					<form id='company-add-form' class="form-horizontal">
 						<div class="form-group">
 							<label for="company" class="control-label col-xs-2">Company</label>
 							<div class="col-xs-10">
@@ -123,7 +125,7 @@
 							<label for="address" class="control-label col-xs-2">Address</label>
 							<div class="col-xs-10">
 								<input type="text" class="form-control" name="address"
-									placeholder="Address" required>
+									placeholder="Address">
 							</div>
 						</div>
 
@@ -131,7 +133,7 @@
 							<label for="city" class="control-label col-xs-2">city</label>
 							<div class="col-xs-10">
 								<input type="text" class="form-control"  name="city"
-									placeholder="city" required>
+									placeholder="city">
 							</div>
 						</div>
 
@@ -170,6 +172,7 @@
 	<script src='libs/jquery-validation/jquery.validate.1.13.1.min.js'></script>    
 
     <script src='libs/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js'></script>
+        <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
     <script src='libs/bootstrap-table-1.6.1/bootstrap-table.min.js'></script>
     <script src='libs/bootbox/bootbox.4.3.0.min.js'></script>
 	<script src='libs/knockout/knockout-3.2.0.min.js'></script>
