--- a/src/main/webapp/company-complex.html
+++ b/src/main/webapp/company-complex.html
@@ -16,6 +16,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/dashboard.css" rel="stylesheet">
     <link href="libs/bootstrap/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css"  rel="stylesheet">
+    <link href="libs/bootstrap-notify/bootstrap-notify.css"  rel="stylesheet">    
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="libs/bootstrap-table-1.6.1/bootstrap-table.min.css"  rel="stylesheet">
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
@@ -67,6 +68,7 @@
        </div>  
     </div>  
 
+    <div class='notifications top-right'></div>
     <div class="container">
       <!-- InstanceBeginEditable name="MainBody" -->
 		<h1 class='page-header'><span class='small'>Company</span> <span data-bind='text: company.companyName'></span></h1>
@@ -83,32 +85,33 @@
 				    <div class="form-group">
 				        <label for="address" class="control-label col-xs-2">Address</label>
 				        <div class="col-xs-10">
-				            <input readonly='true' type="text" name="address" class="form-control" placeholder="Address" data-bind = 'value: company.address'/>
+				            <input type="text" name="address" class="form-control" placeholder="Address" data-bind = 'value: company.address'/>
 				        </div>
 				    </div>
 				    <div class="form-group">
 				        <label for="city" class="control-label col-xs-2">City</label>
 				        <div class="col-xs-10">
-				            <input readonly='true' type="text" name="city" class="form-control" placeholder="City" data-bind = 'value: company.city'/>
+				            <input type="text" name="city" class="form-control" placeholder="City" data-bind = 'value: company.city'/>
 				        </div>
 				    </div>
 				    <div class="form-group">
 				        <label for="state" class="control-label col-xs-2">State</label>
 				        <div class="col-xs-10">
-				            <input readonly='true' type="text" name="state" class="form-control" placeholder="State" data-bind = 'value: company.state'/>
+				            <input type="text" name="state" class="form-control" placeholder="State" data-bind = 'value: company.state'/>
 				        </div>
 				    </div>				    
 				    <div class="form-group">
 				        <label for="zip" class="control-label col-xs-2">Zip</label>
 				        <div class="col-xs-10">
-				            <input readonly='true' type="text" name="zip" class="form-control" placeholder="Zip" data-bind = 'value: company.zip'/>
+				            <input type="text" name="zip" class="form-control" placeholder="Zip" data-bind = 'value: company.zip'/>
 				        </div>
 				    </div>				    
 				    				    
 				</form>		
 			</div>
 	        <div class="panel-footer">
-	        	<button class='btn btn-info' data-bind='click: deleteRecord'>Delete Company</button>
+	            <button type='button' id='update-button' disabled='true' class='btn btn-info' data-bind='click: updateRecord'>Save Changes</button>
+	        	<button type='button' class='btn btn-info' data-bind='click: deleteRecord'>Delete Company</button>
 			</div>
         </div>		    
 
@@ -294,6 +297,7 @@
 	<script src='libs/jquery-validation/jquery.validate.1.13.1.min.js'></script>    
 
     <script src='libs/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js'></script>
+        <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
     <script src='libs/bootstrap-table-1.6.1/bootstrap-table.min.js'></script>
     <script src='libs/bootbox/bootbox.4.3.0.min.js'></script>
 	<script src='libs/knockout/knockout-3.2.0.min.js'></script>
