removed live.js

--- a/src/main/webapp/company-complex.html
+++ b/src/main/webapp/company-complex.html
@@ -304,7 +304,10 @@
     
    	<script src='libs/jasny-bootstrap/js/jasny-bootstrap.min.js'></script>
 	<script src='js/wr8.js'></script>
-	<script src='js/live.js'></script>
+
+    <!--
+   	<script src='../js/live.js'></script>
+    -->
     <script src='js/json-io-utils.js'></script>	
 
 	<!-- InstanceBeginEditable name="AfterJsLoad" -->
