--- a/src/main/webapp/company-complex.html
+++ b/src/main/webapp/company-complex.html
@@ -83,6 +83,13 @@
 		    
 				<form id='info-form' class="form-horizontal collapse in">
 				    <div class="form-group">
+				        <label for="address" class="control-label col-xs-2">Company</label>
+				        <div class="col-xs-10">
+				            <input type="text" name="company" class="form-control" placeholder="Company" data-bind = 'value: company.companyName'/>
+				        </div>
+				    </div>
+				
+				    <div class="form-group">
 				        <label for="address" class="control-label col-xs-2">Address</label>
 				        <div class="col-xs-10">
 				            <input type="text" name="address" class="form-control" placeholder="Address" data-bind = 'value: company.address'/>
