--- a/src/main/webapp/company-unit.html
+++ b/src/main/webapp/company-unit.html
@@ -63,7 +63,7 @@
             <ul class="breadcrumb">
               <!-- InstanceBeginEditable name="BreadCrumb" -->
 				<li><a href='companies.html'>&lt;&lt;&nbsp;Companies</a></li>
-				<li><a href='javascript: history.go(-1)'>&lt;&lt;&nbsp;Company</a></li>
+				<li><a href='javascript: _gotoApp_Company()'>&lt;&lt;&nbsp;Company</a></li>
 				<!-- InstanceEndEditable -->  
             
            </ul>  
