--- a/src/main/webapp/sensor-events.html
+++ b/src/main/webapp/sensor-events.html
@@ -62,9 +62,9 @@
             <ul class="breadcrumb">
               <!-- InstanceBeginEditable name="BreadCrumb" -->
 				<li><a href='companies.html'>&lt;&lt;&nbsp;Companies</a></li>
-				<li><a href='javascript: history.go(-1)'>&lt;&lt;&nbsp;Complex</a></li>
-                <li><a href='javascript: history.go(-1)'>&lt;&lt;&nbsp;Units</a></li>				
-                <li><a href='javascript: history.go(-1)'>&lt;&lt;&nbsp;Unit</a></li>                
+				<li><a href='javascript: _gotoApp_Company()'>&lt;&lt;&nbsp;Company</a></li>
+                <li><a href='javascript: _gotoApp_Complex()'>&lt;&lt;&nbsp;Complex</a></li>				
+                <li><a href='javascript: _gotoApp_Unit()'>&lt;&lt;&nbsp;Unit</a></li>                
 				<!-- InstanceEndEditable -->  
             
            </ul>  
