--- a/src/main/webapp/unit-sensor.html
+++ b/src/main/webapp/unit-sensor.html
@@ -62,8 +62,8 @@
             <ul class="breadcrumb">
               <!-- InstanceBeginEditable name="BreadCrumb" -->
 				<li><a href='companies.html'>&lt;&lt;&nbsp;Companies</a></li>
-				<li><a href='javascript: history.go(-1)'>&lt;&lt;&nbsp;Complex</a></li>
-                <li><a href='javascript: history.go(-1)'>&lt;&lt;&nbsp;Units</a></li>				
+				<li><a href='javascript: history.go(-1)'>&lt;&lt;&nbsp;Company</a></li>
+                <li><a href='javascript:_gotoPreviousPage()'>&lt;&lt;&nbsp;Complex</a></li>				
 				<!-- InstanceEndEditable -->  
             
            </ul>  
