--- a/src/main/webapp/unit-sensor.html
+++ b/src/main/webapp/unit-sensor.html
@@ -154,7 +154,7 @@
 							class="rowlink">
 							<tr data-bind="click: $root.rowClicked">
 								<td data-bind='text: s.id'></td>
-                                <td data-bind="text: s.roleLabel"></td>
+                                <td data-bind="text: s.role"></td>
 								<td data-bind="text: s.sensor"></td>
 							</tr>
 						</tbody>
