--- a/src/main/webapp/sensor-events.html
+++ b/src/main/webapp/sensor-events.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- InstanceBeginEditable name="doctitle" -->
+    <meta http-equiv="refresh" content="30" />
 <title>Sensor Events</title>
 <!-- InstanceEndEditable -->
     <!-- Bootstrap core CSS -->
