--- a/src/main/webapp/company-complex.html
+++ b/src/main/webapp/company-complex.html
@@ -42,10 +42,6 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="companies.html">Companies</a></li>
-            <li><a href="settings.html">Settings</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li><a href="help.html">Help</a></li>
             <li><a href="#" onclick='doLogout()'>Logout</a></li>
           </ul>
           <!--
@@ -61,7 +57,7 @@
         <div class="span6">  
             <ul class="breadcrumb">
               <!-- InstanceBeginEditable name="BreadCrumb" -->
-				<li><a href='companies.html'>&lt;&lt;&nbsp;Companies</a></li>
+				<li id='company-bread'><a href='companies.html'>&lt;&lt;&nbsp;Companies</a></li>
 				<!-- InstanceEndEditable -->  
             
            </ul>  
