--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,52 +26,26 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+ 
           <a class="navbar-brand" href="#">WaterR8 Administration Console</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="settings.html">Settings</a></li>
-            <li><a href="help.html">Help</a></li>
-          </ul>
-          <!--
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
-          -->
-        </div>
+
       </div>
     </nav>
-
+    <div class='container'>
     <!-- InstanceBeginEditable name="MainBody" -->
 			
 
 <div class="container">
 
-      <form class="form-signin" onsubmit='return checkLogin()'>
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
+
+<h1>Welcome To WaterR8 Administration Console</h1>
 
     </div> <!-- /container -->			
 			
 			
 			<!-- InstanceEndEditable -->
-
+     </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
