--- a/src/main/webapp/sensor-events.html
+++ b/src/main/webapp/sensor-events.html
@@ -43,10 +43,6 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="companies.html">Companies</a></li>
-            <li><a href="settings.html">Settings</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li><a href="help.html">Help</a></li>
             <li><a href="#" onclick='doLogout()'>Logout</a></li>
           </ul>
           <!--
@@ -62,7 +58,7 @@
         <div class="span6">  
             <ul class="breadcrumb">
               <!-- InstanceBeginEditable name="BreadCrumb" -->
-				<li><a href='companies.html'>&lt;&lt;&nbsp;Companies</a></li>
+				<li id='company-bread' style='display: none'><a href='companies.html'>&lt;&lt;&nbsp;Companies</a></li>
 				<li><a href='javascript: _gotoApp_Company()'>&lt;&lt;&nbsp;Company</a></li>
                 <li><a href='javascript: _gotoApp_Complex()'>&lt;&lt;&nbsp;Complex</a></li>				
                 <li><a href='javascript: _gotoApp_Unit()'>&lt;&lt;&nbsp;Unit</a></li>                
