addd specific repeater page

--- a/src/main/webapp/company-complex.html
+++ b/src/main/webapp/company-complex.html
@@ -68,10 +68,10 @@
     <div class="container">
       <!-- InstanceBeginEditable name="MainBody" -->
 		<h1 class='page-header'><span class='small'>Company</span> <span data-bind='text: company.companyName'></span></h1>
-		<div class="panel panel-info panel-collapse" >
+		<div id='edit-panel' class="panel panel-info panel-collapse" >
 		    <div class='panel-heading'>
 		        Company Info
-		        <div class='events-label'><span data-bind='text: networkStatus.eventCount'></span> Events</div>
+		        <div class='events-label'><span data-bind='text: networkStatus.eventCount'></span> Sensor Events</div>
 		        <button type='button' data-bind='click: showNetworkMap' class='network-map-btn btn btn-xs btn-primary'>Network Map</button>
 	        </div>
 		    <div class='panel-body'>
