--- a/src/main/webapp/sensor-events.html
+++ b/src/main/webapp/sensor-events.html
@@ -73,9 +73,6 @@
       <!-- InstanceBeginEditable name="MainBody" -->
 		<h1 class="page-header">
 		     <span class='small'>Sensor</span>
-		     <span data-bind='text: company.companyName'></span>
-             <span data-bind='text: complex.complexName'></span>
-             <span data-bind='text: unit.unitNumber'></span>
              <span data-bind='text: sensor.sensor'></span>
 		 </h1>
 
@@ -121,25 +118,19 @@
 			<div class="panel-body">
 				<div class="table-responsive">
 					<table class="table table-striped table-hover">
-						<thead>
+	                     <thead>
 							<tr>
-							    <th width="25%">time</th>
-							    <th width="15%">type</th>
-								<th width="15%">seq</th>
-								<th width="15%">bat</th>
-								<th width="15%">hopcnt</th>
-								<th width="15%">first</th>
+							    <th width="25%">Sequence</th>
+							    <th width="20%">Duration</th>
+								<th width="30%">Time</th>
 						    </tr>
 						</thead>
 						<tbody data-bind="template: {foreach: events,  as: 'e'}"
 							class="rowlink">
 							<tr>
-								<td data-bind='text: e.timeStamp'></td>
-                                <td data-bind='text: e.type'></td>
-                                <td data-bind='text: e.seq'></td>
-                                <td data-bind='text: e.bat'></td>                                								
-                                <td data-bind='text: e.hopCnt'></td>                                								
-                                <td data-bind='text: e.first'></td>                                								
+								<td data-bind='text: e.seq'></td>
+                                <td data-bind='text: e.dur'></td>
+                                <td data-bind='text: e.timeStamp'></td>
 							</tr>
 						</tbody>
 					</table>
