--- a/src/main/webapp/repeater-events.html
+++ b/src/main/webapp/repeater-events.html
@@ -130,7 +130,7 @@
 							<tr>
 								<td data-bind='text: e.seq'></td>
                                 <td data-bind='text: e.hopCnt'></td>
-                                <td data-bind='text: e.timeStamp'></td>
+                                <td data-bind='text: e.first'></td>
 							</tr>
 						</tbody>
 					</table>
