--- a/src/main/webapp/sensor-events.html
+++ b/src/main/webapp/sensor-events.html
@@ -74,6 +74,7 @@
 		<h1 class="page-header">
 		     <span class='small'>Sensor</span>
              <span data-bind='text: sensor.sensor'></span>
+             <span data-bind='text: unit.unitNumber'></span>
 		 </h1>
 
 
