--- a/src/main/webapp/repeater-events.html
+++ b/src/main/webapp/repeater-events.html
@@ -73,7 +73,9 @@
       <!-- InstanceBeginEditable name="MainBody" -->
 		<h1 class="page-header">
 		     <span class='small'>Repeater</span>
-             <span data-bind='text: sensor.sensor'></span>
+                     <span data-bind='text: sensor.sensor'></span>
+		     <span class='small'>Unit</span>
+                     <span data-bind='text: unit.unitNumber'></span>
 		 </h1>
 
 
