--- a/src/main/webapp/unit-sensor.html
+++ b/src/main/webapp/unit-sensor.html
@@ -133,14 +133,14 @@
 			</div>
             </div>
 		<div class="panel panel-success">
-		    <div class='panel-heading'>Sensors</div>
+		    <div class='panel-heading'>Devices</div>
 			<div class="panel-body">
 				<div class="table-responsive">
 					<table class="table table-striped table-hover">
 						<thead>
 							<tr>
 								<th width="18%">Role</th>
-								<th width="18%">Sensor</th>
+								<th width="18%">Serial Number</th>
                                 <th width="18%">Total Events</th>
                                 <th width="18%">Last Event</th>								
 						    </tr>
