--- a/src/main/webapp/companies - Copy.html
+++ b/src/main/webapp/companies - Copy.html
@@ -42,6 +42,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="#" onclick='_showNetworkMapForCompany()'>Network Map</a></li>
             <li><a href="#" onclick='doLogout()'>Logout</a></li>
           </ul>
           <!--
@@ -56,7 +57,7 @@
     <div class="row">  
         <div class="span6">  
             <ul class="breadcrumb">
-              <!-- InstanceBeginEditable name="BreadCrumb" -->BreadCrumb<!-- InstanceEndEditable -->  
+              <!-- InstanceBeginEditable name="BreadCrumb" --><!-- InstanceEndEditable -->  
             
            </ul>  
        </div>  
@@ -65,16 +66,16 @@
     <div class='notifications top-right'></div>
     <div class="container">
       <!-- InstanceBeginEditable name="MainBody" -->
+
 		<h1 class="page-header">Registered Companies</h1>
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<div class="table-responsive">
-					<table class="table table-striped table-hover">
+					<table class="table table-striped table-hover" >
 						<thead>
 							<tr>
 								<th width="5%">#</th>
 								<th width="18%">Company Name</th>
-								<th width="5%">Owner</th>
 								<th width="23%">Address</th>
 								<th width="10%">City</th>
 								<th width="10%">State</th>
@@ -83,10 +84,9 @@
 						</thead>
 						<tbody data-bind="template: {foreach: companies,  as: 'company'}"
 							class="rowlink">
-							<tr  data-bind="click: $root.companyClicked">
+							<tr data-bind="click: $root.companyClicked">
 								<td data-bind='text: company.id'></td>
 								<td data-bind="text: company.companyName"></td>
-								<td data-bind="text: company.owner"></td>
 								<td data-bind="text: company.address"></td>
 								<td data-bind="text: company.city"></td>
 								<td data-bind="text: company.state"></td>
@@ -96,9 +96,66 @@
 					</table>
 				</div>
 			</div>
-            <div class="panel-footer"><button onclick='createCompany()'>Add Company</button></div>			
+			<div class="panel-footer">
+				<button class='btn btn-info' onclick='createCompany()'>Add Company</button>
+			</div>
 		</div>
 
+
+
+
+
+
+
+		<div style='display: none' id='company-add-form-div'>
+
+			<div class="row">
+				<div class="col-md-12">
+					<form id='company-add-form' class="form-horizontal">
+						<div class="form-group">
+							<label for="company" class="control-label col-xs-2">Company</label>
+							<div class="col-xs-10">
+								<input  type="text" class="form-control" name="company"	placeholder="Company" >
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="address" class="control-label col-xs-2">Address</label>
+							<div class="col-xs-10">
+								<input type="text" class="form-control" name="address"
+									placeholder="Address">
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label for="city" class="control-label col-xs-2">city</label>
+							<div class="col-xs-10">
+								<input type="text" class="form-control"  name="city"
+									placeholder="city">
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label for="state" class="control-label col-xs-2">state</label>
+							<div class="col-xs-10">
+								<input type="text" class="form-control" name="state"
+									placeholder="state">
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label for="zip" class="control-label col-xs-2">zip</label>
+							<div class="col-xs-10">
+								<input type="zip" class="form-control" name="zip"
+									placeholder="zip">
+							</div>
+						</div>
+					</form>
+
+
+				</div>
+			</div>
+
+		</div>
 
 
 
@@ -124,6 +181,9 @@
    	<script src='../js/live.js'></script>
     -->
     <script src='js/json-io-utils.js'></script>	
+
+	<script src='libs/springy/springy.js'></script>
+	<script src="libs/springy/springyui.js"></script>
 
 	<!-- InstanceBeginEditable name="AfterJsLoad" -->
 	<script src='js/dashboard.js'></script>
