--- a/src/main/webapp/companies.html
+++ b/src/main/webapp/companies.html
@@ -42,6 +42,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="#" onclick='_showNetworkMapForCompany()'>Network Map</a></li>
             <li><a href="#" onclick='doLogout()'>Logout</a></li>
           </ul>
           <!--
@@ -180,6 +181,9 @@
    	<script src='../js/live.js'></script>
     -->
     <script src='js/json-io-utils.js'></script>	
+
+	<script src='libs/springy/springy.js'></script>
+	<script src="libs/springy/springyui.js"></script>
 
 	<!-- InstanceBeginEditable name="AfterJsLoad" -->
 	<script src='js/dashboard.js'></script>
