--- a/src/main/webapp/company-complex.html
+++ b/src/main/webapp/company-complex.html
@@ -42,6 +42,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="#" onclick='_showNetworkMapForCompany()'>Network Map</a></li>
             <li><a href="#" onclick='doLogout()'>Logout</a></li>
           </ul>
           <!--
@@ -72,7 +73,6 @@
 		    <div class='panel-heading'>
 		        Company Info
 		        <div class='events-label'><span data-bind='text: networkStatus.eventCount'></span> Sensor Events</div>
-		        <button type='button' data-bind='click: showNetworkMap' class='network-map-btn btn btn-xs btn-primary'>Network Map</button>
 	        </div>
 		    <div class='panel-body'>
 		    
@@ -313,9 +313,10 @@
     -->
     <script src='js/json-io-utils.js'></script>	
 
-	<!-- InstanceBeginEditable name="AfterJsLoad" -->
 	<script src='libs/springy/springy.js'></script>
 	<script src="libs/springy/springyui.js"></script>
+
+	<!-- InstanceBeginEditable name="AfterJsLoad" -->
 	<script src='js/company-complex.js'></script>
 	<!-- InstanceEndEditable -->
     
