changed src to int

--- a/src/main/webapp/unit-sensor.html
+++ b/src/main/webapp/unit-sensor.html
@@ -178,7 +178,7 @@
 						</div>			
 						
 						<div class="form-group">
-							<label for="Sensor" class="control-label col-xs-2">Sensor</label>
+							<label for="Sensor" class="control-label col-xs-2">Serial Number</label>
 							<div class="col-xs-10">
 								<input type="text" class="form-control" name="sensor"
 									placeholder="Sensor Serial Number">
