--- a/src/main/webapp/repeater-events.html
+++ b/src/main/webapp/repeater-events.html
@@ -8,7 +8,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- InstanceBeginEditable name="doctitle" -->
-    <meta http-equiv="refresh" content="30" />
 <title>Repeater Events</title>
 <!-- InstanceEndEditable -->
     <!-- Bootstrap core CSS -->
@@ -124,9 +123,10 @@
 						<thead>
 							<tr>
 							    <th width="20%">Sequence</th>
-							    <th width="15%">Hop Count</th>
+							    <th width="20%">Hop Count</th>
+                                <th width="20%">RSSI Rcv</th>							    
 								<th width="20%">First</th>
-                                                                <th width="35%">Time</th>
+                                <th width="20%">Time</th>
 						    </tr>
 						</thead>
 						<tbody data-bind="template: {foreach: events,  as: 'e'}"
@@ -134,6 +134,7 @@
 							<tr>
 								<td data-bind='text: e.seq'></td>
                                 <td data-bind='text: e.hopCnt'></td>
+                                <td data-bind='text: e.rssiRcv'></td>                                
                                 <td data-bind='text: e.first'></td>
                                 <td data-bind='text: e.timeStamp'></td>
 							</tr>
