--- a/src/main/webapp/unit-sensor.html
+++ b/src/main/webapp/unit-sensor.html
@@ -170,6 +170,20 @@
 				<div class="col-md-12">
 					<form id='add-form' class="form-horizontal" action='#'
 						method='POST'>
+						
+						<div class="form-group">
+						    <div class='col-xs-2'>&nbsp;</div>
+						    <div class="col-xs-10">
+                                <button type='button' class='btn btn-default'>Select Available Sensor</button>						
+							</div>
+						</div>
+						<div class="form-group">
+						    <div class='col-xs-2'>&nbsp;</div>
+						    <div class="col-xs-10">
+                                <div class="form-conl col-xs-10">Or</div>						
+							</div>
+						</div>
+
 						<div class="form-group">
 							<label for="role" class="control-label col-xs-2">Role</label>
 							<div class="col-xs-10">
