added add sensor

--- a/src/main/webapp/repeater-events.html
+++ b/src/main/webapp/repeater-events.html
@@ -93,7 +93,7 @@
 							<div class="form-group">
 								<label for="role" class="control-label col-xs-2">Role</label>
 								<div class="col-xs-10">
-								    <input data-bind="value: sensor.role" name="role" class="form-control" readonly='true'/>
+								    <input data-bind="value: sensor.roleLabel" name="role" class="form-control" readonly='true'/>
 								</div>
 							</div>			
 							
