--- a/src/main/webapp/analytics.html
+++ b/src/main/webapp/analytics.html
@@ -42,7 +42,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" onclick='_showNetworkMapForCompany()'>Network Map</a></li>
+            <li id='network-map-btn'><a href="#" onclick='_showNetworkMapForCompany()'>Network Map</a></li>
             <li><a href="#" onclick='doLogout()'>Logout</a></li>
           </ul>
           <!--
