--- a/src/main/webapp/companies.html
+++ b/src/main/webapp/companies.html
@@ -73,21 +73,21 @@
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<div class="table-responsive">
-					<table class="table table-striped table-hover" >
+					<table class="wr8-table table table-striped table-hover" >
 						<thead>
 							<tr>
-								<th width="5%">#</th>
-								<th width="18%">Company Name</th>
-								<th width="23%">Address</th>
-								<th width="10%">City</th>
-								<th width="10%">State</th>
-								<th width="10%">Zip</th>
+								<th data-column-id='id' data-visibility='false' width="5%">#</th>
+								<th data-column-id='0' width="18%">Company Name</th>
+								<th data-column-id='1' width="23%">Address</th>
+								<th data-column-id='2' width="10%">City</th>
+								<th data-column-id='3' width="10%">State</th>
+								<th data-column-id='4' width="10%">Zip</th>
 							</tr>
 						</thead>
 						<tbody data-bind="template: {foreach: companies,  as: 'company'}"
 							class="rowlink">
 							<tr data-bind="click: $root.companyClicked">
-								<td data-bind='text: company.id'></td>
+								<td data-visibility='false' data-bind='text: company.id'></td>
 								<td data-bind="text: company.companyName"></td>
 								<td data-bind="text: company.address"></td>
 								<td data-bind="text: company.city"></td>
