--- a/src/main/webapp/repeater-events.html
+++ b/src/main/webapp/repeater-events.html
@@ -121,19 +121,21 @@
 		    <div class='panel-heading'>100 Most Recent Sensor Events for src <b data-bind='text: sensor.sensorHex'></b></div>
 			<div class="panel-body">
 				<div class="table-responsive">
-					<table class="table table-striped table-hover">
+					<table class="wr8-table table table-striped table-hover">
 						<thead>
 							<tr>
-							    <th width="20%">Sequence</th>
-							    <th width="20%">Hop Count</th>
-                                <th width="20%">RSSI Rcv</th>							    
-								<th width="20%">First</th>
-                                <th width="20%">Time</th>
+							    <th data-column-id='id' data-visibility='false' width="20%">Sequence</th>
+							    <th data-column-id='0' width="20%">Sequence</th>
+							    <th data-column-id='1' width="20%">Hop Count</th>
+                                <th data-column-id='2' width="20%">RSSI Rcv</th>							    
+								<th data-column-id='3' width="20%">First</th>
+                                <th data-column-id='4' width="20%">Time</th>
 						    </tr>
 						</thead>
 						<tbody data-bind="template: {foreach: events,  as: 'e'}"
 							class="rowlink">
 							<tr>
+							    <td data-visibility='false' data-bind='text: e.id'></td>
 								<td data-bind='text: e.seq'></td>
                                 <td data-bind='text: e.hopCnt'></td>
                                 <td data-bind='text: e.rssiRcv'></td>                                
